# Simplify

./: CMakeLists.txt  Simplify.cpp
